Changed about me paragraph

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             I’m Harsh Sahani, a student from the TCET 2026 batch, preparing for campus and off-campus placements. I have a strong interest in tech development and have built several projects showcasing my skills. I’ve also participated in hackathons to enhance my problem-solving and teamwork abilities.
           </p>
           <p>
-            I’m proficient in technologies like React, Node.js, Express.js, MongoDB, and MySQL, with a knack for solving real-world problems through coding. I’m actively preparing for placements, focusing on cracking aptitude tests, and exploring opportunities like MERN developer internships
+            I’m proficient in technologies like React, Node.js, Express.js, MongoDB, and MySQL, with a knack for solving real-world problems through coding. I’m actively preparing for placements,and exploring opportunities like MERN developer internships
           </p>
         </div>
 
