--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
 
     <!-- title -->
     <title>Harsh Sahani - Portfolio</title>
-    <meta property="og:title" content="Himanshu Relhan - Portfolio" />
-    <meta name="twitter:title" content="Himanshu Relhan - Portfolio" />
+    <meta property="og:title" content="Harsh Sahani - Portfolio" />
+    <meta name="twitter:title" content="Harsh Sahani  - Portfolio" />
     <!-- keywords -->
     
     <!-- url -->
     <link rel="canonical" href="https://himanshuwebdev.com" />
     <meta property="og:url" content="https://himanshuwebdev.com" />
     <meta name="twitter:url" content="https://himanshuwebdev.com" />
-    <!-- description -->
-    <meta name="description"
-      content="Himanshu is a MERN stack web developer from India who has expertise in developing user-friendly responsive websites using HTML5, CSS3, JavaScript, Tailwind, Bootstrap, ReactJs etc. and he is a keen learner. To have a discussion, get in touch with him today!" />
-    <meta property="og:description"
-      content="Himanshu is a MERN stack web developer from India who has expertise in developing user-friendly responsive websites using HTML5, CSS3, JavaScript, Tailwind, Bootstrap, ReactJs etc. and he is a keen learner. To have a discussion, get in touch with him today!" />
-    <meta name="twitter:description"
-      content="Himanshu is a MERN stack web developer from India who has expertise in developing user-friendly responsive websites using HTML5, CSS3, JavaScript, Tailwind, Bootstrap, ReactJs etc. and he is a keen learner. To have a discussion, get in touch with him today!" />
+    <!-- description -->>
     <!-- image -->
     <meta property="og:image" content="images/android-chrome-192x192.png" />
     <meta name="twitter:image" content="images/android-chrome-192x192.png"/>
