Made changes for mobile port

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <meta property="og:locale" content="en_US">
     <meta name="twitter:card" content="summary" />
     <!-- ////  favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
-    <link rel="manifest" href="manifest.json" />
+    
     <!-- /// theme color /// -->
     <meta name="theme-color" content="#343d68" />
 
@@ -124,7 +121,7 @@
       </div>
 
       <!-- button for small screens -->
-      <a class="btn extra-btn" href="assets/himanshu_resume.pdf" target="_blank" download>Hire me</a>
+      <a class="btn extra-btn" href="https://docs.google.com/document/d/10fCQQkER0sJnQJHic2DETmMVw1bzRrKGCsizIF-9FOY/edit?tab=t.0" target="_blank" download>Resume</a>
     </section>
 
     <!-- /////// projects section /////////// -->
